# order-quick-read

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
.circleci/: config.yml
.github/workflows/: build.yml
assets/: app_icon.icns
docs/: electron-parity-checklist.md
docs/superpowers/plans/: 2026-06-15-email-order-reader.md  2026-06-16-electron-rewrite.md  2026-06-16-order-quick-read-branding.md
docs/superpowers/specs/: 2026-06-16-electron-rewrite-design.md  2026-06-16-order-quick-read-branding-design.md
electron/main/: ipc.ts
electron/main/services/: excelParser.ts  mailClient.ts  orderCache.ts  orderScanner.ts  settingsStore.ts  updater.ts
electron/preload/: index.cts
electron/renderer/: App.tsx  global.d.ts  styles.css
electron/renderer/components/: FilterBar.tsx  OrderTable.tsx  SettingsPanel.tsx  StatusBar.tsx  Toolbar.tsx
electron/shared/: date.ts  types.ts
scripts/: build_macos.sh  build_windows.ps1  generate_icons.py
src/email_order_reader/: branding.py  email_client.py  excel_parser.py  self_update.py  settings.py  updates.py
tests/: test_build_windows_script.py  test_email_client.py  test_excel_parser.py  test_github_actions_workflow.py  test_icon_assets.py  test_main_window.py  test_package_import.py  test_self_update.py  test_settings.py  test_updates.py
tests/electron/: excelParser.test.ts  ipcContract.test.ts  orderScanner.test.ts  renderer.test.tsx  shared.test.ts  storage.test.ts  tooling.test.ts  updater.test.ts  workflow.test.ts
(+2 files in other folders)
